--- a/Downloads/Gluva-main/Gluva-main/package.json
+++ b/Downloads/Gluva-main/Gluva-main/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "analyze": "vite build --mode analyze",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.{js,jsx,json,css,md}\"",
     "prepare": "husky"
@@ -36,6 +39,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
