fix routes of image

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ PORT=5002
 MONGO_URI=mongodb://127.0.0.1:27017/combucha-shop
 # MONGO_URI=mongodb+srv://aborodovoi_db_user:2awoCfJzoQFlRmJw@cluster0.fgesfkk.mongodb.net/combucha-shop?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=77777
+CLOUDINARY_CLOUD_NAME=dg68crvm1
+CLOUDINARY_API_KEY=345135213825538
+CLOUDINARY_API_SECRET=8BllnZ5ke13773WApoTDomaU2ac
